--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -53,12 +53,12 @@ nav.garages-nav {
 @media only screen and (max-width: 768px) {
   nav.garages-nav {
     top:auto;
-    bottom:70px;
-    right:12px;
-    left:12px;
-    background:rgba(0, 0, 0, 0.6);
-    padding:6px 4px;
-    border-radius:12px;
+    bottom:0;
+    right:0;
+    left:0;
+    background:rgba(0, 0, 0, 0.8);
+    padding:8px 4px;
+    border-radius:0;
     backdrop-filter:blur(10px);
 
     ul {
