--- a/styles/_title.scss
+++ b/styles/_title.scss
@@ -133,6 +133,7 @@ input.stroke-title {
     top:12px;
     left:12px;
     flex-wrap:nowrap;
+    padding-left:0;
 
     .logo-img img {
       width:32px;
